--- a/app/src/main/res/layout/activity_login_otp.xml
+++ b/app/src/main/res/layout/activity_login_otp.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:layout_margin="20dp"
     android:weightSum="100"
-    tools:context=".LoginPhoneNumberActivity">
+    tools:context=".LoginOtpActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:layout_height="32dp"
             android:layout_margin="10dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/my_primary">
+            android:backgroundTint="@color/gray">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
             android:layout_height="32dp"
             android:layout_margin="10dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/gray">
+            android:backgroundTint="@color/my_primary">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -61,21 +61,21 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/phone_icon"
+        android:src="@drawable/otp_icon"
         app:tint="@color/my_primary"
         android:contentDescription="login"
         android:layout_weight="20"/>
-    
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Mobile Number"
+        android:text="Enter OTP"
         android:gravity="center_vertical"
         android:letterSpacing="0.08"
         android:textSize="25sp"
         android:textStyle="bold"
         android:layout_weight="5"/>
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -83,24 +83,17 @@
         android:gravity="center"
         android:layout_weight="5">
 
-        <com.hbb20.CountryCodePicker
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:ccp_showFlag="false"
-            app:ccp_showNameCode="false"
-            android:id="@+id/login_countrycode"/>
-
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:hint="Mobile"
-            android:inputType="phone"
-            android:maxLength="11"
+            android:hint="OTP"
+            android:inputType="number"
+            android:maxLength="6"
             android:layout_margin="10dp"
             android:background="@drawable/edit_text_rounded_corner"
             android:elevation="5dp"
-            android:id="@+id/login_mobilenumber"/>
+            android:id="@+id/login_otp"/>
 
     </LinearLayout>
 
@@ -113,9 +106,9 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Send OTP"
+            android:text="NEXT"
             android:background="@drawable/button_rounded_corner"
-            android:id="@+id/send_otp_button">
+            android:id="@+id/login_next_btn">
         </Button>
     <ProgressBar
         android:layout_width="32dp"
@@ -124,4 +117,11 @@
         android:layout_gravity="center"
         android:id="@+id/login_progress_bar"/>
     </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_weight="10"
+        android:text="Resend OTP in 30 sec"
+        android:id="@+id/resend_otp_textView"/>
 </LinearLayout>
