--- a/app/src/main/res/layout/activity_login_user_name.xml
+++ b/app/src/main/res/layout/activity_login_user_name.xml
@@ -20,7 +20,7 @@
             android:layout_height="32dp"
             android:layout_margin="10dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/my_primary">
+            android:backgroundTint="@color/gray">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
             android:layout_height="32dp"
             android:layout_margin="10dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/gray">
+            android:backgroundTint="@color/my_primary">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -61,21 +61,21 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/phone_icon"
+        android:src="@drawable/person_icon"
         app:tint="@color/my_primary"
         android:contentDescription="login"
         android:layout_weight="20"/>
-    
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Mobile Number"
+        android:text="Enter User Name"
         android:gravity="center_vertical"
         android:letterSpacing="0.08"
         android:textSize="25sp"
         android:textStyle="bold"
         android:layout_weight="5"/>
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -83,24 +83,16 @@
         android:gravity="center"
         android:layout_weight="5">
 
-        <com.hbb20.CountryCodePicker
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:ccp_showFlag="false"
-            app:ccp_showNameCode="false"
-            android:id="@+id/login_countrycode"/>
-
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:hint="Mobile"
+            android:hint="Username"
             android:inputType="phone"
-            android:maxLength="11"
             android:layout_margin="10dp"
             android:background="@drawable/edit_text_rounded_corner"
             android:elevation="5dp"
-            android:id="@+id/login_mobilenumber"/>
+            android:id="@+id/login_username"/>
 
     </LinearLayout>
 
@@ -113,9 +105,9 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Send OTP"
+            android:text="Let Me In "
             android:background="@drawable/button_rounded_corner"
-            android:id="@+id/send_otp_button">
+            android:id="@+id/login_let_me_in">
         </Button>
     <ProgressBar
         android:layout_width="32dp"
@@ -124,4 +116,5 @@
         android:layout_gravity="center"
         android:id="@+id/login_progress_bar"/>
     </LinearLayout>
+
 </LinearLayout>
